Create tag for [milestone:0.3.4] release.

--- a/examples/bench/cheetah/template.tmpl
+++ b/examples/bench/cheetah/template.tmpl
@@ -6,7 +6,7 @@
     <title>${title}</title>
   </head>
   <body>
-    #include "cheetah/header.tmpl"
+    #include "header.tmpl"
 
     <h2>Loop</h2>
     #if $items
@@ -17,6 +17,6 @@
       </ul>
     #end if
 
-    #include "cheetah/footer.tmpl"
+    #include "footer.tmpl"
   </body>
 </html>
